--- a/roles/mariadb/tasks/main.yml
+++ b/roles/mariadb/tasks/main.yml
@@ -76,3 +76,42 @@
   tags:
     - mariadb
     - packages
+
+- name: Set MariaDB root password
+  community.mysql.mysql_user:
+    name: root
+    host_all: true
+    password: "{{ mariadb.root_password }}"
+    login_unix_socket: /var/run/mysqld/mysqld.sock
+    check_implicit_admin: true
+    state: present
+  tags:
+    - mariadb
+    - configuration
+    - root_password
+
+- name: Set .my.cnf configuration file for root user
+  ansible.builtin.template:
+    src: my.cnf.j2
+    dest: /root/.my.cnf
+    mode: '0600'
+    owner: root
+    group: root
+  tags:
+    - mariadb
+    - configuration
+    - root_password
+    - my_cnf
+
+- name: Set .my.cnf configuration file for ansible user
+  ansible.builtin.template:
+    src: my.cnf.j2
+    dest: /home/ansible/.my.cnf
+    mode: '0600'
+    owner: ansible
+    group: ansible
+  tags:
+    - mariadb
+    - configuration
+    - root_password
+    - my_cnf
